--- a/lark.services.yml
+++ b/lark.services.yml
@@ -5,6 +5,12 @@ services:
     arguments:
       - 'lark_entity'
 
+  Drupal\lark\Service\Cache\ExportsRuntimeCache:
+    class: Drupal\lark\Service\Cache\ExportsRuntimeCache
+
+  Drupal\lark\Service\Cache\ExportablesRuntimeCache:
+    class: Drupal\lark\Service\Cache\ExportablesRuntimeCache
+
   Drupal\lark\Service\Utility\ExportableStatusBuilder:
     class: Drupal\lark\Service\Utility\ExportableStatusBuilder
     autowire: true
