--- a/lark.services.yml
+++ b/lark.services.yml
@@ -10,6 +10,10 @@ services:
     factory: ['Drupal\lark\Model\LarkSettings', 'create']
     autowire: true
 
+  Drupal\lark\Service\AssetFileManager:
+    class: Drupal\lark\Service\AssetFileManager
+    autowire: true
+
   Drupal\lark\Service\Cache\ExportsRuntimeCache:
     class: Drupal\lark\Service\Cache\ExportsRuntimeCache
 
