--- a/lark.services.yml
+++ b/lark.services.yml
@@ -10,6 +10,12 @@ services:
     factory: ['Drupal\lark\Model\LarkSettings', 'create']
     autowire: true
 
+  Drupal\lark\Routing\RouteSubscriber:
+    class: Drupal\lark\Routing\RouteSubscriber
+    autowire: true
+    tags:
+      - { name: event_subscriber }
+
   Drupal\lark\Service\AssetFileManager:
     class: Drupal\lark\Service\AssetFileManager
     autowire: true
