lark-9: Restore import operation when the entity doesnt exist in drupal

--- a/lark.routing.yml
+++ b/lark.routing.yml
@@ -16,6 +16,16 @@ lark.exports_list:
   requirements:
     _permission: 'lark import export entities'
 
+lark.import_single:
+  path: '/admin/config/development/lark/entity-exports/entity-import/{source_plugin_id}/{uuid}'
+  defaults:
+    _title: 'Entity Import'
+    _controller: '\Drupal\lark\Controller\ExportsManager::importEntity'
+  options:
+    _admin_route: TRUE
+  requirements:
+    _permission: 'lark import export entities'
+
 lark.import_source:
   path: '/admin/config/development/lark/entity-exports/entity-export/{source_plugin_id}'
   defaults:
