--- a/lark.services.yml
+++ b/lark.services.yml
@@ -28,6 +28,10 @@ services:
     class: Drupal\lark\Service\Utility\ExportableStatusResolver
     autowire: true
 
+  Drupal\lark\Service\Utility\SourceViewBuilder:
+    class: Drupal\lark\Service\Utility\SourceViewBuilder
+    autowire: true
+
   Drupal\lark\Service\Utility\TableFormHandler:
     class: Drupal\lark\Service\Utility\TableFormHandler
     autowire: true
