--- a/lark.links.task.yml
+++ b/lark.links.task.yml
@@ -14,12 +14,6 @@ entity.lark_source.colletion:
   title: 'Sources'
   weight: 1
 
-lark.exports_list:
-  route_name: lark.exports_list
-  base_route: lark.settings
-  title: 'Exports Manager'
-  weight: 2
-
 entity.lark_source.canonical:
   route_name: entity.lark_source.canonical
   base_route: entity.lark_source.edit_form
@@ -29,11 +23,11 @@ entity.lark_source.canonical:
 entity.lark_source.edit_form:
   route_name: entity.lark_source.edit_form
   base_route: entity.lark_source.edit_form
-  title: 'View'
+  title: 'Edit'
   weight: 1
 
 entity.lark_source.delete_form:
   route_name: entity.lark_source.delete_form
   base_route: entity.lark_source.edit_form
-  title: 'View'
+  title: 'Delete'
   weight: 2
