lark-11: Make SourceManager irrelevant and deprecate the plugin type

--- a/lark.services.yml
+++ b/lark.services.yml
@@ -51,6 +51,7 @@ services:
     arguments:
       $cache_backend: '@cache.default'
 
+  # @deprecated
   Drupal\lark\Service\SourceManagerInterface:
     class: Drupal\lark\Service\SourceManager
     autowire: true
