--- a/lark.routing.yml
+++ b/lark.routing.yml
@@ -15,12 +15,15 @@ lark.settings:
     _permission: 'lark administer configuration'
 
 lark.action_import_source:
-  path: '/admin/lark/action/import-source/{source_plugin_id}'
+  path: '/admin/lark/action/import-source/{lark_source}'
   defaults:
     _title: 'Import Source'
     _controller: '\Drupal\lark\Controller\ExportsManager::importSource'
   options:
     _admin_route: TRUE
+    parameters:
+      lark_source:
+        type: entity:lark_source
   requirements:
     _permission: 'lark import export entities'
 
@@ -34,6 +37,8 @@ lark.action_import_source_entity:
     parameters:
       lark_source:
         type: entity:lark_source
+      uuid:
+        type: string
   requirements:
     _permission: 'lark import export entities'
 
