--- a/lark.services.yml
+++ b/lark.services.yml
@@ -20,6 +20,10 @@ services:
     class: Drupal\lark\Service\AssetFileManager
     autowire: true
 
+  Drupal\lark\Service\Utility\ExportableSourceResolver:
+    class: Drupal\lark\Service\Utility\ExportableSourceResolver
+    autowire: true
+
   Drupal\lark\Service\Utility\ExportableStatusBuilder:
     class: Drupal\lark\Service\Utility\ExportableStatusBuilder
     autowire: true
