lark-33: hook-theme for toggle_row_table

--- a/lark.libraries.yml
+++ b/lark.libraries.yml
@@ -2,5 +2,7 @@ admin:
   css:
     theme:
       assets/css/lark.admin.css: {}
+
+toggle-row-table:
   js:
-    assets/js/exports-browser.js: {}
+    assets/js/toggle-row-table.js: {}
