Upload archive to a source.

--- a/lark.links.menu.yml
+++ b/lark.links.menu.yml
@@ -14,7 +14,7 @@ lark.settings:
   parent: lark.base
   route_name: lark.settings
   title: 'Settings'
-  description: ''
+  description: 'Lark configuration settings.'
   weight: 10
 
 # Lark source entity "View" menu item
@@ -23,3 +23,9 @@ entity.lark_source.canonical:
   route_name: entity.lark_source.canonical
   title: 'Source'
   description: 'View'
+
+entity.lark_source.upload_form:
+  parent: entity.lark_source.edit_form
+  route_name: entity.lark_source.upload_form
+  title: 'Upload'
+  description: 'Upload an archive of exports to a Source.'
